--- a/public/locales/de/common.yml
+++ b/public/locales/de/common.yml
@@ -4,3 +4,5 @@ privacyPolicy: Datenschutz
 donate: Unterstützen
 gitHub: GitHub
 imprint: Impressum
+note: CovidPass wurde deaktiviert, da es unter iOS jetzt eine native Möglichkeit gibt, digitale Covid Zertifikate der EU zur Wallet hinzuzufügen
+noteLink: Verifizierbare Informationen zur COVID-19-Impfung in Apple Wallet und Health hinzufügen
