--- a/public/locales/en/common.yml
+++ b/public/locales/en/common.yml
@@ -3,4 +3,6 @@ subtitle: Add your EU Digital COVID Certificates to your favorite wallet apps.
 privacyPolicy: Privacy Policy
 donate: Sponsor
 gitHub: GitHub
-imprint: Imprint
+imprint: Legal Notice
+note: CovidPass has been discontinued since iOS now supports a native way of adding EU Digital Covid Certificates to the wallet
+noteLink: Add verifiable COVID-19 vaccination information to Apple Wallet and Health
